<resources>
    <string name="app_name">Task1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>

    <string name="home">Home</string>
    <string name="login_first__message">Please, Login First!</string>

    <string name="detail">Detail</string>

    <string name="error_empty_email_message">Please enter email</string>
    <string name="error_empty_password_message">Please enter your password</string>
</resources>