<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.task1.ui.fragments.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.task1.ui.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_homeFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.task1.ui.fragments.DetailFragment"
        android:label="@string/detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="article"
            app:argType="com.example.task1.data.model.Article" />
    </fragment>
</navigation>